--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,30 +1,3 @@
-name: Android CI
-
-on: [push]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v1
-    - name: checkout submodule
-      run: git submodule sync --recursive && git submodule update --init --recursive
-      
-    - name: before build
-      uses: xdtianyu/actions-android-ci@master
-      with:
-        args: '"
-        source .travis/env.sh;
-        touch local.properties
-        "'
-
-    - name: build
-      uses: xdtianyu/actions-android-ci@master
-      with: 
-        args: '"
-        source .travis/env.sh;
-        source /opt/setup-android-sdk.sh;
-        "'
-        run: bash buildpe-notg.sh
+- name: Bash for GitHub Actions
+  uses: jcblw/bash@1.0.0
+  run: bash buildpe-notg.sh
