--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,4 @@
-- name: Bash for GitHub Actions
-  uses: jcblw/bash@1.0.0
-  run: bash buildpe-notg.sh
+action "Setup" {
+  uses = "jcblw/bash@master"
+  args = ["bash buildpe-notg.sh"]
+}
