--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,16 @@
-action "Setup" {
-  uses = "jcblw/bash@master"
-  args = ["bash buildpe-notg.sh"]
-}
+
+name: CI
+
+on: [push]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: jcblw/bash@master
+    - name: Run a one-line script
+      run: echo Hello, world!
+    - name: Run a multi-line script
+      run: bash buildpe.sh
