--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: jcblw/bash@master
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: bash buildpe.sh
+    - name: git-bash
+      uses: fnkr/github-action-git-bash@v1.1
+      run: bash buildpe-notg.sh
