--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,6 @@
-
-name: CI
-
-on: [push]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: git-bash
-      uses: fnkr/github-action-git-bash@v1.1
-      run: bash buildpe-notg.sh
+- name: GitHub Action for Bash
+  uses: lafernando/github-action-bash@v1.0
+- action "Script Execution" {
+  uses = "lafernando/github-action-bash/@master"
+  args = "[script content base64 encoded]"
+}
