--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,3 @@
-- name: GitHub Action for Bash
-  uses: lafernando/github-action-bash@v1.0
-
-- action "Script Execution" {
-
-}
 name: CI
 
 on: [push]
@@ -16,4 +10,4 @@ jobs:
     steps:
     - name: Run a multi-line script
     - uses: lafernando/github-action-bash/@master
-       args: "[bash buildpe-notg.sh]"
+    - run: bash buildpe-notg.sh
