--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,5 @@
-on:
-  push:
-    branches:
-    - master
-name: CI
-jobs:
-  test:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-    - uses: lafernando/github-action-bash/@master
-    - name: Building
-      with:
-        script: .github/buildpe-notg.sh
+deploy:
+  provider: script
+  script: bash buildpe-notg.sh
+  on:
+    branch: master
