--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       TEST_REPORTS: /tmp/test-reports
 
     working_directory: ~/android
-    resource_class: xlarge
+    resource_class: large
     steps:
       - checkout
 
